# hermes_instrument

./: .-template.yml  .gitignore  .pre-commit-config.yaml  CITATION.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  cookiecutter.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/workflows/: black.yml  codestyle.yml  docs.yml  python-package.yml  testing.yml
.trunk/: actions  logs  notifications  out
.trunk/actions/trunk-upgrade-available/: 2022-12-16-16-44-55.yaml
changelog/: 12.doc.1.rst  13.doc.1.rst
docs/: api.rst  conf.py  index.rst
docs/cmad/: calibration_plan.rst  overview_and_bkg.rst  related_docs.rst
docs/dev-guide/: code_standards.rst  config.rst  dev_env.rst  docs.rst  index.rst  maintainer_workflow.rst
docs/user-guide/: customization.rst  index.rst  logger.rst
hermes_instrument/: __init__.py  example_mod.py
hermes_instrument/calibration/: calibration.py
hermes_instrument/data/: configrc
hermes_instrument/data/calibration/: README.rst
hermes_instrument/io/: file_tools.py
hermes_instrument/tests/: test_calibration.py  test_file_tools.py
hermes_{{ cookiecutter.instr_name }}/: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.rst  LICENSE.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
hermes_{{ cookiecutter.instr_name }}/.devcontainer/: devcontainer.json
hermes_{{ cookiecutter.instr_name }}/.github/workflows/: codestyle.yml  cruft_auto_pr.yml  docs.yml  testing.yml
hermes_{{ cookiecutter.instr_name }}/changelog/: README.rst
hermes_{{ cookiecutter.instr_name }}/docs/: Makefile  api.rst  conf.py  index.rst
hermes_{{ cookiecutter.instr_name }}/docs/cmad/: calibration_plan.rst  measurement_algos.rst  overview_and_bkg.rst
hermes_{{ cookiecutter.instr_name }}/docs/dev-guide/: config.rst  docs.rst  maintainer_workflow.rst  tests.rst
hermes_{{ cookiecutter.instr_name }}/docs/user-guide/: customization.rst  index.rst
hermes_{{ cookiecutter.instr_name }}/hermes_{{ cookiecutter.instr_name }}/: __init__.py
hermes_{{ cookiecutter.instr_name }}/hermes_{{ cookiecutter.instr_name }}/calibration/: calibration.py
hermes_{{ cookiecutter.instr_name }}/hermes_{{ cookiecutter.instr_name }}/data/: README.rst  configrc
hermes_{{ cookiecutter.instr_name }}/hermes_{{ cookiecutter.instr_name }}/data/calibration/: README.rst
hermes_{{ cookiecutter.instr_name }}/hermes_{{ cookiecutter.instr_name }}/io/: file_tools.py
hermes_{{ cookiecutter.instr_name }}/hermes_{{ cookiecutter.instr_name }}/tests/: test_calibration.py  test_file_tools.py
