[metadata]
name = hermes_instrument
author = Jane Doe
author_email = jane.doe@example.com
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://github.com/HERMES-SOC/hermes_instrument
description = A Python package to process the HERMES instrument.
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
  astropy>=4.1.0
  numpy>=1.16.0


[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main


[options.extras_require]
dev =
    black

test =
    tox
    pytest
    pytest-astropy
    pytest-cov
docs =
    sphinx
    sphinx-automodapi
    towncrier

[options.package_data]
hermes_instrument = data/*

[tool:pytest]
testpaths = "hermes_instrument" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
remote_data_strict = True

[coverage:run]
omit =
  hermes_instrument/__init*
  hermes_instrument/conftest.py
  hermes_instrument/*setup_package*
  hermes_instrument/tests/*
  hermes_instrument/*/tests/*
  hermes_instrument/extern/*
  hermes_instrument/version*
  */hermes_instrument/__init*
  */hermes_instrument/conftest.py
  */hermes_instrument/*setup_package*
  */hermes_instrument/tests/*
  */hermes_instrument/*/tests/*
  */hermes_instrument/extern/*
  */hermes_instrument/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
